# hvac-system-project

./: .gitignore  Procfile  README.md  dev.bat  dev.ps1  environment.yml  pyproject.toml  render.yaml  requirements-dashboard.txt  requirements-ml.txt  requirements.txt  run_dashboard.bat  run_dashboard.py  test_ml_setup.py  test_simulation.py
dashboard/: __init__.py  main.py
dashboard/data/: hvac_log.db
dashboard/data/models/: energy_model.joblib  load_model.joblib
dashboard/services/: hvac_service.py  ml_service.py
dashboard/simulation/: __init__.py  controllers.py  mpc_advanced.py  occupancy.py  rc_model.py  simulator.py  weather.py
dashboard/static/css/: ml-styles.css  style.css
dashboard/static/js/: app.js
dashboard/templates/: base.html  heating_load.html  live_control.html  overview.html  radiator.html  solar.html
examples/: ml_demo.py
hvac/: __init__.py
hvac/ml/: __init__.py  data_generator.py  models.py  trainer.py  utils.py
tests/: robustness_excel_export.py  robustness_results.json  robustness_results.xlsx  robustness_test.py
