[tool.poetry]
name = "hvac-system-project"
version = "0.2.0"
description = "HVAC engineering calculations, simulation, and ML prediction"
authors = ["Bola"]
readme = "README.md"
packages = [{include = "hvac"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
coolprop = ">=6.4.3.post1"
scipy = ">=1.10.1"
pandas = ">=1.5.3"
sympy = ">=1.11.1"
astral = ">=3.2"
iapws = ">=1.5.3"
dill = ">=0.3.6"
pint = ">=0.20.1"
odfpy = ">=1.4.1"
multiprocess = ">=0.70.14"
lmfit = ">=1.2.2"
mpld3 = ">=0.5.9"
pyarrow = ">=15.0.0"
openpyxl = ">=3.1.2"
numdifftools = ">=0.9.41"
control = "^0.10.1"
matplotlib = "^3.10.0"
scipy-stubs = "~=1.15.2"
pandas-stubs = "~=2.2.3"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0.0"

[tool.poetry.group.dashboard.dependencies]
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.32.0"}
jinja2 = ">=3.1.0"
python-multipart = ">=0.0.9"

[tool.poetry.scripts]
dev = "run_dashboard:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
